# renovate-pr-truncate

./: pyproject.toml  renovate.json
