[tool.poetry]
name = "renovate-pr-truncate"
version = "0.0.0"
description = "Example of renovate truncating a PR text"
package-mode = true

[tool.poetry.dependencies]
python = "~3.14.0"
inboard = "^0.82.0"
faststream = "^0.6.0"
python-multipart = "^0.0.21"
odfdo = "^3.9.3"
python-json-logger = "^4.0.0"
pytest-asyncio = "^1.0.0"
aiohttp = "^3.10.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ruff = "^0.14.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
typer = { version = "^0.15.4", extras = ["all"] }
file-magic = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
