[tool.poetry]
name = "renovate-pr-truncate"
version = "0.0.0"
description = "Example of renovate truncating a PR text"
package-mode = true

[tool.poetry.dependencies]
python = "~3.14.0"
inboard = "^0.82.0"
faststream = "^0.6.0"
python-multipart = "^0.0.21"
python-json-logger = "^4.0.0"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
